tests/miniJava/neg/000232_mutation.MiniJava
class java { public static void extends ( String [ ] java ) { { } } }
